--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         }
     ],
     "require": {
-        "php": ">=7.0.0"
+        "php": ">=7.0.0",
+        "min-radish/php-curl": "~1.2"
     },
     "autoload": {
         "psr-4": {
